<resources>
    <string name="app_name">LoanCalculator</string>
    <string name="message">Loan calculator</string>
    <string name="loanAmount">Loan Amount</string>
    <string name="termLoan">Term of Loan (years)</string>
    <string name="yearInterest">Yearly Interest Rate</string>
    <string name="calButton">Calculate</string>
    <string name="clrButton">Clear</string>
    <string name="result">Results</string>
    <string name="monthPay">Monthly Payment</string>
    <string name="totalPay">Total Payment</string>
    <string name="totalInterest">Total Interest</string>
    <string name="loanAmountHint">50000</string>
    <string name="termLoanHint">7</string>
    <string name="yearlyRateHint">7.5</string>
    <string name="monthPayHint">766.91</string>
    <string name="totalPayHint">64420.44</string>
    <string name="totalInterestHint">14420.44</string>

</resources>
